swen430as1/tests/invalid/trycatch/TryCatch_Invalid_01.while
void f(int x) {
    try {
        return 2 + f(x-1)
    } // require one or more catch handlers	
}